# train-learned-planner

./: .dir-locals.el  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.envpool  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  val_medium_level_idxs.npy
.circleci/: config.yml
cleanba/: __init__.py  cleanba_impala.py  cleanba_ppo.py  config.py  convlstm.py  env_trivial.py  environments.py  evaluate.py  impala_loss.py  launcher.py  load_and_eval.py  network.py  optimizer.py  pbt.py
cleanba/envs/: __init__.py  pacman.py
cleanba/envs/box_world/: Human_playing_Commandline.py  box_world_env.py  boxworld_gen.py
cleanba/notebooks/: behavioral_analysis.ipynb  behavioral_analysis_resnet.ipynb  check_norm.py  count_parameters.py  dev_convlstm.py  examine_vtrace.py  train_resnet.py
cleanrl_utils/evals/: cleanba_ppo_envpool_procgen_eval.py  ppo_envpool_jax_eval.py
experiments/atari/: 001_epsilon.py  002_lr_and_norm.py  0035_yang_init_fixed.py  003_yang_init.py  009_yang_lr.py  010_test_out_rms.py
experiments/craftax/: 000_drc_ppo_impala.py
experiments/sokoban/: 003_optimizer_and_lr.py  004_num_steps.py  005_easier_sokoban.py  006_sokoban_resnet.py  007_more_epochs.py  008_atari_cnn.py  011_atari_cnn_with_base.py  012_bias_amount.py  013_easier_sokoban.py  014_longer_rollouts.py  015_updates_and_normalize.py  016_scale_loss.py  017_shorter_time.py  018_explore_updates.py  019_push.py  020_l2.py  021_scale_dims.py  022_boxoban.py  023_more_boxoban.py  024_different_hypers.py  025_truncation.py  026_grad_norm_and_lr.py  027_long_run.py  028_truncation_and_images.py  029_long.py  030_drc.py  031_grad_norm.py  032_head_scale.py  033_initialization.py  034_fencepad.py  035_repeat_good.py  036_wild_variations.py  037_verify_wild.py  038_fence_variations.py  039_variations_act.py  040_residual.py  041_more_tweaks.py  042_continue_040_4.py  043_more_tweaks.py  044_more_planners.py  (+35 more)
k8s/: devbox.yaml  envpool-devbox.yaml  kaniko-build.yaml  runner-no-nfs.yaml  runner-no-sokoban.yaml  runner-pip-envpool.yaml  runner.yaml
levels-for-evaluating-planning/: 001.txt  002.txt  003.txt  004.txt  006.txt
tests/: cartpole.ipynb  cartpole.py  conftest.py  test_cartpole.py  test_convlstm.py  test_environments.py  test_impala_loss.py  test_networks.py  test_training.py
wandb_scripts/: compare_cfg.py  wandb_merge.py
