[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
exclude = ["third_party"]

[tool.ruff]
line-length = 127
target-version = "py310"
exclude = [
    "third_party",
    "cleanba/legacy_scripts",
]

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]  # ignore third_party dir for now
markers = [
    "slow",
    "envpool: tests that use Envpool and thus won't run on Mac",
]

[tool.pyright]
exclude = [
    "wandb/**",  # Saved old codes
    "third_party/**",  # Other libraries
    "cleanba/legacy_scripts/**",
    "cleanrl_utils/evals/cleanba_ppo_envpool_procgen_eval.py",
    "cleanrl_utils/evals/ppo_envpool_jax_eval.py",
    "cleanrl_utils/benchmark.py",
    "cleanrl_utils/huggingface.py",
    "cleanba/cleanba_ppo.py",
]
reportPrivateImportUsage = "warning"

[project]
name = "lp-cleanba"
version = "1.0.0"
description = ""
authors = [
    {name="Costa Huang", email="costa.huang@outlook.com"},
    {name="Adrià Garriga-Alonso", email="adria@far.ai"},
]
readme = "README.md"

dependencies = [
    "tyro ~=0.5.5",
    "tensorboard ~=2.12.0",
    "flax ~=0.8.0",
    "optax ~=0.1.4",
    "huggingface-hub ~=0.12.0",
    "wandb ~=0.17.4",
    "tensorboardx ~=2.6",
    "chex ~= 0.1.5",
    "gym ~= 0.23.1",
    "opencv-python ~=4.7.0.68",
    "moviepy ~=1.0.3",
    "rlax ~=0.1.5",
    "farconf @ git+https://github.com/AlignmentResearch/farconf.git",
    "ray[tune] ~=2.11.0",
    "matplotlib ~=3.9.0",
]
[project.optional-dependencies]
dev = [
    "pre-commit ~=3.6.0",
    "pyright ~=1.1.349",
    "ruff ~=0.1.13",
    "pytest ~=7.3.1",
]

launch-jobs = [
    "names_generator ~=0.1.0",
    "GitPython ~=3.1.37",
]

[tool.setuptools]
packages = ["cleanba", "cleanrl_utils"]
