[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
exclude = ["third_party"]

[tool.ruff]
line-length = 127
target-version = "py310"
exclude = [
    "third_party",
    "cleanba/legacy_scripts",
    "cleanba/envs",
]

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]  # ignore third_party dir for now
markers = [
    "slow",
    "envpool: tests that use Envpool and thus won't run on Mac",
]

[tool.pyright]
exclude = [
    "wandb/**",  # Saved old codes
    "third_party/**",  # Other libraries
]
reportPrivateImportUsage = "warning"

[project]
name = "train-learned-planner"
version = "1.0.0"
description = "Code for training a DRC planner on Sokoban"
authors = [
    {name="Adrià Garriga-Alonso", email="adria@far.ai"},
    {name="Mohammad Taufeeque", email="taufeeque@far.ai"},
    {name="Costa Huang", email="costa.huang@outlook.com"},
]
readme = "README.md"

dependencies = [
    "rich ~= 13.7",
    "tensorboard ~=2.12.0",
    "flax ~=0.8.0",
    "optax ~=0.1.4",
    "huggingface-hub",
    "wandb ~=0.17.4",
    "tensorboardx ~=2.6",
    "chex ~= 0.1.5",
    "gymnasium ~= 0.29",
    "opencv-python >=4.10",
    "moviepy ~=1.0.3",
    "rlax ~=0.1.5",
    "farconf @ git+https://github.com/AlignmentResearch/farconf.git",
    "ray[tune] ~=2.40.0",
    "matplotlib ~=3.9.0",
    "jax ==0.4.34",
    "jaxlib ==0.4.34",
]
[project.optional-dependencies]
dev = [
    "pre-commit ~=3.6.0",
    "pyright ~=1.1.349",
    "ruff ~=0.1.13",
    "pytest ~=8.1.1",
]

launch-jobs = [
    "names_generator ~=0.1.0",
    "GitPython ~=3.1.37",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cleanba*"]
